<resources>
    <string name="app_name">Puzzle Layout</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="all">All</string>
    <string name="images">Images</string>
    <string name="image_not_found">image not found</string>
    <string name="splash">Splash</string>
    <string name="images_selected">images selected</string>
    <string name="next">Next</string>
    <string name="gallery">Gallery</string>
    <string name="layouts">Layouts</string>
    <string name="home">Home</string>
    <string name="select">Please Select Images</string>
    <string name="select_only">You can select only five images</string>
    <string name="pswap">Swap</string>
    <string name="pmirror">Mirror</string>
    <string name="pflip">Flip</string>
    <string name="protate">Rotate</string>
    <string name="pzoomplus">Zoom</string>
    <string name="pleft">Left</string>
    <string name="pright">Right</string>
    <string name="pup">Up</string>
    <string name="pdown">Down</string>
    <string name="pchange">Change</string>
    <string name="selectsingleimage">Select image to apply changes</string>
    <string name="border">Border</string>
    <string name="corner">Corner</string>
    <string name="permission">Permission</string>
    <string name="allow_permissions">Allow Permissions</string>
</resources>