<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".app.flow.home.FragmentHome">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarMediaImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black_light"
        app:navigationIcon="@drawable/ic_back"
        app:navigationIconTint="@color/white"
        app:title="@string/home"
        app:titleTextColor="@color/white" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/gallery"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:backgroundTint="@color/yellow" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbtLayouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/layouts"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:backgroundTint="@color/yellow" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
